🐛 FIX: legal position on mobile

--- a/scss/blocks/_burger-menu.scss
+++ b/scss/blocks/_burger-menu.scss
@@ -71,7 +71,7 @@
   opacity: 0;
   inline-size: 100vw;
   block-size: 100%;
-  padding-block-start: calc(var(--space-3xl) * 2);
+  padding-block-start: calc(var(--space-3xl) * 1.5);
   padding-inline: var(--space-s-3xl);
   overflow-y: auto;
   background-color: var(--clr-primary-dark);
